--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 BASIC_AUTH_LOGIN=maslovmaksim92@yandex.ru
 BASIC_AUTH_PASSWORD=123456
-
-
+FLASK_ENV=production
+BITRIX_CLIENT_ID=local.67e85c29746cb1.58287098
+BITRIX_CLIENT_SECRET=zNeKebH9555gmzHvcDdCbicZ8fDkGY8vwzPxYOd3Vhfv68vgRn
+BITRIX_REDIRECT_URI=https://postingfototg.onrender.com/oauth/callback
 
 BITRIX_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/gq2ixv9nypiimwi9/
 BITRIX_TASK_ADD_URL=https://vas-dom.bitrix24.ru/rest/1/qjo4wwwmvxtcvhqb/task.item.add
