--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
-BASIC_AUTH_LOGIN=maslovmaksim92@yandex.ru
-BASIC_AUTH_PASSWORD=123456
-FLASK_ENV=production
+# 🔐 OAuth Bitrix24
 BITRIX_CLIENT_ID=local.67e85c29746cb1.58287098
 BITRIX_CLIENT_SECRET=zNeKebH9555gmzHvcDdCbicZ8fDkGY8vwzPxYOd3Vhfv68vgRn
 BITRIX_REDIRECT_URI=https://postingfototg.onrender.com/oauth/callback
+
+# 📂 Работа с файлами
+BASIC_AUTH_LOGIN=maslovmaksim92@yandex.ru
+BASIC_AUTH_PASSWORD=123456
+BITRIX_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/gq2ixv9nypiimwi9/
+FILE_FIELD_ID=UF_CRM_1740994275251
+FOLDER_FIELD_ID=UF_CRM_1743235503935
+
 
 BITRIX_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/gq2ixv9nypiimwi9/
 BITRIX_TASK_ADD_URL=https://vas-dom.bitrix24.ru/rest/1/qjo4wwwmvxtcvhqb/task.item.add
