--- a/.env
+++ b/.env
@@ -11,6 +11,12 @@ FILE_FIELD_ID=UF_CRM_1740994275251
 FOLDER_FIELD_ID=UF_CRM_1743235503935
 
 
+# 🤖 Telegram
+TELEGRAM_BOT_TOKEN=7828348940:AAGAu_pwZniOoBSNaHCMngN-pcVDiL_fdZg
+
+# 🗄️ Database
+DATABASE_URL=sqlite:///app.db
+
 BITRIX_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/gq2ixv9nypiimwi9/
 BITRIX_TASK_ADD_URL=https://vas-dom.bitrix24.ru/rest/1/qjo4wwwmvxtcvhqb/task.item.add
 BITRIX_TASK_UPDATE_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/wpga8x9a8ewghq7a/task.item.update
