--- a/.env
+++ b/.env
@@ -10,6 +10,22 @@ BITRIX_WEBHOOK_URL=https://vas-dom.bitrix24.ru/rest/1/gq2ixv9nypiimwi9/
 FILE_FIELD_ID=UF_CRM_1740994275251
 FOLDER_FIELD_ID=UF_CRM_1743235503935
 
+# Bitrix24 OAuth
+BITRIX_CLIENT_ID=local.67e85c29746cb1.58287098
+BITRIX_CLIENT_SECRET=zNeKebH9555gmzHvcDdCbicZ8fDkGY8vwzPxYOd3Vhfv68vgRn
+BITRIX_REDIRECT_URI=https://yourdomain.com/oauth/callback
+
+# Field IDs
+FILE_FIELD_ID=UF_CRM_1740994275251
+FOLDER_FIELD_ID=UF_CRM_1743235503935
+
+# Basic Auth
+BASIC_AUTH_LOGIN=your_login
+BASIC_AUTH_PASSWORD=your_password
+
+# Server
+PORT=10000
+DATABASE_URL=sqlite:///app.db
 
 # 🤖 Telegram
 TELEGRAM_BOT_TOKEN=7828348940:AAGAu_pwZniOoBSNaHCMngN-pcVDiL_fdZg
