--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 BITRIX_CLIENT_ID=local.67e85c29746cb1.58287098
 BITRIX_CLIENT_SECRET=zNeKebH9555gmzHvcDdCbicZ8fDkGY8vwzPxYOd3Vhfv68vgRn
 BITRIX_REDIRECT_URI=https://postingfototg.onrender.com/oauth/callback
+PORT=10000
 
 # 📂 Работа с файлами
 BASIC_AUTH_LOGIN=maslovmaksim92@yandex.ru
