Добавлен URL вебхука для обновления сделки в Bitrix

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-RENDER_API_KEY=rnd_3ePhaXgHGJitVSFZctEskfPuof31
+BITRIX_DEAL_UPDATE_URL=https://vas-dom.bitrix24.ru/rest/1/2swwzy9rhrawva6y/crm.deal.update
