--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn[standard]
+fastapi==0.115.2
+requests==2.31.0
+uvicorn[standard]==0.27.1
+gunicorn==21.2.0
 python-dotenv
-httpx
-gunicorn
+httpx==0.27.0
