chore(env): add example env with OPENAI_API_KEY

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-BITRIX_WEBHOOK=https://vas-dom.bitrix24.ru/rest/1/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-BITRIX_FOLDER_NAME=ФотоСделок
-TG_BOT_TOKEN=your_telegram_token
-TG_CHANNEL_ID=@your_channel_or_chat_id
-DEBUG=true
+OPENAI_API_KEY=sk-...
