fix(requirements): восстановлен оригинальный список + добавлены нужные зависимости

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ aiohttp
 python-dotenv
 openai
 pydantic
-pydantic-settings
-tgcrypto
 requests
+tgcrypto
+
+# === добавлено ===
+pydantic-settings
 loguru
