--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-aiohttp==3.8.1
-python-dotenv==0.21.0
-openai==1.14.3
-pydantic==1.10.2
+fastapi==0.115.2
 requests==2.31.0
-tgcrypto==1.2.3
-
-# === добавлено ===
-pydantic-settings==2.2.1
-loguru==0.7.2
+uvicorn[standard]==0.27.1
+gunicorn==21.2.0
+python-dotenv==1.1.0
+httpx==0.27.0
+loguru==0.7.3
+openai==1.75.0
+python-dotenv==1.1.0
+pydantic==2.11.3
+aiohttp==3.11.16
+pydantic-settings==2.8.1
+tgcrypto==1.2.5
