🔐 Добавлен пример переменной BITRIX_WEBHOOK и включены все переменные из Render

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 OPENAI_API_KEY=sk-...
+TG_CHAT_ID=...
+TG_GITHUB_BOT=...
+BASIC_AUTH_LOGIN=...
+BASIC_AUTH_PASSWORD=...
+FILE_FIELD_ID=UF_CRM_...
+FOLDER_FIELD_ID=UF_CRM_...
+BITRIX_WEBHOOK=https://vas-dom.bitrix24.ru/rest/1/bi0kv4y9ym8quxpa
