feat: добавлен пример .env файла для запуска на Render

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-OPENAI_API_KEY=sk-...
-TG_CHAT_ID=...
-TG_GITHUB_BOT=...
-BASIC_AUTH_LOGIN=...
-BASIC_AUTH_PASSWORD=...
-FILE_FIELD_ID=UF_CRM_...
-FOLDER_FIELD_ID=UF_CRM_...
-BITRIX_WEBHOOK=https://vas-dom.bitrix24.ru/rest/1/bi0kv4y9ym8quxpa
+AGENT_BOT_TOKEN=your-telegram-bot-token
+TG_CHAT_LEAD=your-chat-id
+OPENAI_API_KEY=your-openai-key
+WEBHOOK_URL=https://your-app.onrender.com
+AGENT_WEBHOOK_URL=https://your-app.onrender.com/webhook/agent
